# Addd

GifFrameWork/app/: build.gradle
GifFrameWork/app/src/main/: AndroidManifest.xml
GifFrameWork/gradle/wrapper/: gradle-wrapper.properties
H264MediaCodecDemo/: .gitignore  build.gradle  settings.gradle
H264MediaCodecDemo/app/: build.gradle
H264MediaCodecDemo/app/src/main/: AndroidManifest.xml
H264MediaCodecDemo/gradle/wrapper/: gradle-wrapper.properties
H264MediaCodecDemo/rtmp/: build.gradle
H264MediaCodecDemo/rtmp/src/main/: AndroidManifest.xml
H264MediaCodecDemo/rtmpliving/: build.gradle
H264MediaCodecDemo/rtmpliving/src/main/: AndroidManifest.xml
KbitPlayer/: settings.gradle
KbitPlayer/app/: build.gradle
KbitPlayer/app/src/main/: AndroidManifest.xml
KbitPlayer/gradle/wrapper/: gradle-wrapper.properties
OpenGLES/app/: build.gradle
OpenGLES/app/src/main/: AndroidManifest.xml
OpenGLES/gradle/wrapper/: gradle-wrapper.properties
X264LiveRtmp/: settings.gradle
X264LiveRtmp/app/: build.gradle
X264LiveRtmp/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  log.h  native-lib.cpp  readme.txt
X264LiveRtmp/gradle/wrapper/: gradle-wrapper.properties
note/: 2020.11.26-jni内存回收.txt  2020.11.28-jni编译与运行.txt  2020.11.30-cmake原理详解.txt  2020.12.03-H264视频编码原理.txt  2020.12.05-h264、h265中任何视频流片段都能解析出完整帧技术 - 副本.txt  2020.12.07-Mediacodec初探.txt  2020.12.12-手写sps解析.txt  2020.12.15-H265编码原理.txt  2020.12.19-投屏.txt  FFmpeg命令.txt
(+269 files in other folders)
